# dwmd-shfe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main-jxkr-fast.cpp  package.sh  vcpkg-configuration.json  vcpkg.json
ccbase/inc/util/: aes.h  base64.h  compare_string.h  crc32.h  misc.h
export/: build.sh  run.sh
export/demo/: main-jxkr-buzyloop.cpp  main-jxkr-normal.cpp  main-jxkr-tail.cpp
export/etc/: license.lic
include/: instrument.h  jxkr_mdapi.h  shared_mem.h  tsd_mdapi.h  version.h  version.h.in
key_gen/: CMakeLists.txt  main.cpp
key_gen/keys/: private_key.rsa  public_key
libjxkr/: CMakeLists.txt  check_mac.c  check_mac.h  instrument.h  jxkr_mdapi.c  jxkr_mdapi.h  shared_mem.c  shared_mem.h  tsd_mdapi.c  tsd_mdapi.h
package/: build.sh  main-jxkr-buzyloop.cpp  main-jxkr-master-slave.cpp  main-jxkr-normal.cpp  main-jxkr-tail.cpp
package/demo/: main-jxkr-master-slave.cpp  main-jxkr-normal.cpp  main-jxkr-tail.cpp  timestamp.h
package/inc/: jxkr_mdapi.h
presets/: centos7-docker.json  wsl2.json
src/: CMakeLists.txt  jxkr_mdapi.cpp  shared_mem.cpp  tsd_mdapi.c
